tests/NormalTests/paczka1/fuzzy1/77804156.err
Error in line 6: rUOhY5w9VY S437 27,0
Error in line 3: bzaJdAaIl S904 5,0
Error in line 17: bzaJdAaIl A828 21,6
Error in line 25: bzaJdAaIl A828 41,7
Error in line 30: rUOhY5w9VY S904 47,5
